# RSS-Repository

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  README.md  compose.yaml  package-lock.json  package.json  rss_verify.db
container/: entrypoint.sh  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: AiAssistantFab.tsx  AiHeaderPromptButton.tsx  App.tsx  ArticlesListRedirect.tsx  ErrorBoundary.tsx  FilteredArticlesPrompt.tsx  IntervalSelect.tsx  Layout.tsx  OpenRouterDebugLogPanel.tsx  PaginationBar.tsx  PollContext.tsx  SettingsMenu.tsx  TelegramReactionsStrip.tsx  Toasts.tsx  aiAssistantPrefs.ts  aiScreenContext.tsx  aiScreenDigest.ts  (+18 more)
migrations/: 20260329120000_initial_schema.sql  20260412200000_media.sql  20260415120000_initial_schema.sql  20260421100000_feeds_telegram_max_items.sql  20260421120000_article_telegram_reactions.sql  20260422100000_feeds_expand_from_link.sql  20260423120000_article_screenshots.sql  20260424120000_squashed_schema.sql  20260501120000_tags.sql  20260502120000_tag_colors.sql  20260502140000_drop_article_screenshots.sql  20260511120900_add_article_uuid.sql
scripts/: dev.sh  podman-run.sh  reset-database.sh  run-ui-db-tests.sh
src/: article_expand.rs  browser_http.rs  chromium_binary.rs  db.rs  env_util.rs  error.rs  http_retry.rs  ingest.rs  lib.rs  main.rs  media.rs  openapi.json  page_screenshot.rs  scheduler.rs  screenshot_env.rs  screenshot_trim.rs  telegram.rs
tests/: api_smoke.rs  ui_api_database.rs
(+37 files in other folders)
