[package]
name = "rss-repository"
version = "0.1.0"
edition = "2021"

[lib]
name = "rss_repository"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = { version = "0.3", features = ["sink"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "migrate", "chrono", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
rss = "2.0"
atom_syndication = { version = "0.12", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
thiserror = "2"
html-escape = "0.2"
regex = "1"
once_cell = "1"
ammonia = "4"
scraper = "0.22"
url = "2.5"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
testcontainers = "0.24"
tower = { version = "0.5", features = ["util"] }
